<resources>
    <string name="app_name">QuizStudent</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="registered_email">Registered Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">Back</string>
    <string name="start_Attempt">Start Attempt</string>
    <string name="next_question">Next</string>
    <string name="previous">Previous</string>
    <string name="zero">0</string>
    <string name="question">Question</string>
    <string name="option_one">Option 1</string>
    <string name="option_two">Option 2</string>
    <string name="option_three">option 3</string>
    <string name="option_four">Option 4</string>
</resources>