<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuestionActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:textAlignment="center"
        android:text="@string/zero"
        android:textSize="20sp"
        android:layout_marginRight="25dp"
        android:textColor="@color/black"
        android:id="@+id/get_question_number"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:textSize="20sp"
        android:text="@string/question"
        android:layout_marginRight="25dp"
        android:textColor="@color/black"
        android:id="@+id/get_question"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:id="@+id/option1"
        android:text="@string/option_one"
        android:background="@drawable/question_button"
        android:textColor="@color/black"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/option_two"
        android:id="@+id/option2"
        android:background="@drawable/question_button"
        android:textColor="@color/black"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:id="@+id/option3"
        android:text="@string/option_three"
        android:background="@drawable/question_button"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:id="@+id/option4"
        android:text="@string/option_four"
        android:textColor="@color/black"
        android:background="@drawable/question_button"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/next_question"
        android:text="@string/next_question"
        android:layout_marginTop="15dp"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:background="@android:color/holo_red_light"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/previous_question"
        android:layout_marginTop="15dp"
        android:text="@string/previous"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:background="@android:color/holo_red_light"
        />

</LinearLayout>