<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_email"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/email_id"
        android:layout_marginTop="200dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_password"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/forgot_password"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:id="@+id/forgot_password"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:layout_marginTop="15dp"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:text="@string/login"
        android:background="@android:color/holo_red_light"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/to_register"
        android:layout_marginTop="15dp"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:text="@string/register"
        android:background="@android:color/holo_red_light"
        />

</LinearLayout>