<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".PasswordResetActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registered_email"
        android:layout_marginLeft="30dp"
        android:textAlignment="center"
        android:layout_marginRight="30dp"
        android:layout_marginTop="200dp"
        android:id="@+id/reset_email"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reset_password"
        android:layout_marginTop="15dp"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:text="@string/reset_password"
        android:background="@android:color/holo_red_light"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/to_login"
        android:layout_marginTop="15dp"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:text="@string/back"
        android:background="@android:color/holo_red_light"
        />

</LinearLayout>